--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 		var tap = new Tapable();
 
-		//applyPlugins
+		//applyPlugins：依次执行所有插件
 		tap.plugin('test',function(a,b){
 			console.log('test1',a,b);
 		})
@@ -17,7 +17,7 @@
 		})
 		tap.applyPlugins('test','arg1','arg2');
 
-		//applyPluginsWaterfall
+		//applyPluginsWaterfall：依次执行插件，前一个插件的返回值将作为下一个插件的参数
 		tap.plugin('testWaterfall',function(a,b){
 			console.log('testWaterfall1',a,b);
 			//返回值作为下一个插件的第一个返回值
@@ -28,18 +28,18 @@
 		})
 		tap.applyPluginsWaterfall('testWaterfall','arg1','arg2');
 
-		//applyPluginsBailResult
-		tap.plugin('testBail',function(a,b){
-			console.log('testBail1',a,b);
+		//applyPluginsBailResult(依次执行插件，当插件返回值不为undefined时，停止执行之后的插件)
+		tap.plugin('testBailResult',function(a,b){
+			console.log('testBailResult1',a,b);
 			//返回值不为undefined，其后的插件将不再执行
 			return null;
 		})
-		tap.plugin('testBail',function(a,b){
-			console.log('testBail2',a,b);
+		tap.plugin('testBailResult',function(a,b){
+			console.log('testBailResult2',a,b);
 		})
-		tap.applyPluginsBailResult('testBail','arg1','arg2');
+		tap.applyPluginsBailResult('testBailResult','arg1','arg2');
 
-		//applyPluginsAsyncSeries
+		//applyPluginsAsyncSeries：异步的执行插件，后一个插件只有在前一个插件执行回调后才会开始执行，如果有一个插件回调的参数不为false，则将停止执行其后的插件
 		tap.plugin('testAsyncSeries',function(a,b,cb){
 			console.log('testAsyncSeries1',a,b);
 			//执行了回调后才会接着执行接下来的插件
@@ -47,7 +47,7 @@
 		})
 		tap.plugin('testAsyncSeries',function(a,b,cb){
 			console.log('testAsyncSeries2',a,b);
-			//回调参数不为空，将不再继续执行
+			//回调参数不为false，将不再继续执行
 			cb(1);
 		})
 		tap.plugin('testAsyncSeries',function(a,b,cb){
@@ -57,7 +57,7 @@
 			console.log('testAsyncSeriesCb',...arg);
 		})
 
-		//applyPluginsAsyncSeriesBailResult(和applyPluginsAsyncSeries类似，只是回调停止继续执行的判断条件不同)
+		//applyPluginsAsyncSeriesBailResult：和applyPluginsAsyncSeries类似，只是回调停止继续执行的判断条件不同
 		tap.plugin('testAsyncSeriesBailResult',function(a,b,cb){
 			console.log('testAsyncSeriesBailResult1',a,b);
 			//执行了回调后才会接着执行接下来的插件
@@ -75,7 +75,7 @@
 			console.log('testAsyncSeriesBailResultCb',...arg);
 		})
 
-		//applyPluginsAsyncWaterfall(和applyPluginsAsyncSeries类似，只不过插件回调参数只能是两个)
+		//applyPluginsAsyncWaterfall：和applyPluginsAsyncSeries类似，只不过插件回调参数只能是两个
 		tap.plugin('testAsyncWaterfall',function(a,cb){
 			console.log('testAsyncWaterfall1',a);
 			//执行了回调后才会接着执行接下来的插件，第一个必须为false，第二值用来传递给下个插件
@@ -83,7 +83,7 @@
 		})
 		tap.plugin('testAsyncWaterfall',function(a,cb){
 			console.log('testAsyncWaterfall2',a);
-			//回调参数不为空，将不再继续执行
+			//回调参数不为false，将不再继续执行
 			cb(1);
 		})
 		tap.plugin('testAsyncWaterfall',function(a,cb){
@@ -93,16 +93,18 @@
 			console.log('testAsyncWaterfallCb',...arg);
 		})
 
-		//applyPluginsParallel(和applyPluginsAsyncSeries类似)
+		//applyPluginsParallel：通过for循环并行的执行所有插件，如果某个插件执行了回调且回调参数不为false，则其后所有未执行的插件将不再执行。可能存在插件异步调用了回调，这时候后面的插件可能已经执行了
 		tap.plugin('testParallel',function(a,b,cb){
 			console.log('testParallel1',a,b);
-			//执行了回调后才会接着执行接下来的插件，第一个必须为false
-			cb(null,'value');
 		})
 		tap.plugin('testParallel',function(a,b,cb){
 			console.log('testParallel2',a,b);
-			//回调参数不为空，将不再继续执行
+			//回调参数不为false，将不再继续执行
 			cb(1);
+			//如果换成异步，则后面的插件依然能执行
+			// setTimeout(function(){
+			// 	cb(1);
+			// },0)
 		})
 		tap.plugin('testParallel',function(a,b,cb){
 			console.log('testParallel3',a,b);
@@ -111,7 +113,7 @@
 			console.log('testParallelCb',...arg);
 		})
 
-		//applyPluginsParallelBailResult
+		//applyPluginsParallelBailResult：通过for循环执行所有插件，只有第一个插件的回调能执行
 		tap.plugin('testParallelBailResult',function(a,b,cb){
 			console.log('testParallelBailResult1',a,b);
 			//回调函数只有第一次执行,并且参数个数要大于0
@@ -121,7 +123,6 @@
 		})
 		tap.plugin('testParallelBailResult',function(a,b,cb){
 			console.log('testParallelBailResult2',a,b);
-			//回调参数不为空，将不再继续执行
 			cb(1);
 		})
 		tap.plugin('testParallelBailResult',function(a,b,cb){
